[tool.poetry]
name = "components"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
eidolon-ai-sdk = "^0.1.93"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
